[package]
name = "double-pendulum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.1"
rand = "0.8.4"
rayon = "1.5.1"
image = "0.23.14"
imageproc = "0.22.0"
itertools = "0.10.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
ctrlc = "3.2.1"
